tests/invalid/polymorphic_unification.err_exp
polymorphic_unification.m:019: In clause for `p(in, ((list:list_skel) -> dead))':
polymorphic_unification.m:019:   in polymorphically-typed unification:
polymorphic_unification.m:019:   mode error: variable `X' has instantiatedness `bound([] ; '[|]'(free, list:list_skel(free)))',
polymorphic_unification.m:019:   expected instantiatedness was `ground' or `any'.
For more information, try recompiling with `-E'.
